# FineTech

./: .env.example  .eslintrc.cjs  .gitignore  README.md  a1fdfa1_package.json  build_log.txt  package.json  pnpm-lock.yaml  pnpm_error.txt  tsconfig.json  turbo.json  vercel.json
.github/workflows/: ci.yml  deploy.yml
.turbo/cache/: 7e3bee07b9a981b8-meta.json  7e3bee07b9a981b8.tar.zst
apps/api/: alembic.ini  alembic_error.txt  pyproject.toml  seed.py
apps/api/finetech_api/: config.py  db.py  deps.py  main.py  ml_model.py  predictor.py
apps/api/finetech_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/finetech_api/models/: __init__.py  base.py  kb.py  lms.py  market.py  news.py  portfolio.py  user.py
apps/api/finetech_api/routers/: __init__.py  advisor.py  auth_siwe.py  lms.py  market.py  news.py  portfolio.py  prediction.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_initial_schema.py
apps/web/: .eslintrc.cjs  build_output.txt  lint_output.txt  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vercel.json
apps/web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  (+3 more)
apps/worker/: pyproject.toml  run_ingest.py
apps/worker/jobs/: ingest_news.py
docs/: DEPLOYMENT.md
infra/: api.Dockerfile  cloudrun-api.yaml  docker-compose.yml  web.Dockerfile  worker.Dockerfile
services/ml/: pyproject.toml
services/ml/artifacts/: model.pt
services/ml/finetech_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/ml/timeseries/: __init__.py  model.py  train_lstm_attention.py
(+325 files in other folders)
