[project]
name = "finetech-worker"
version = "0.1.0"
description = "Background workers for data ingestion, training, and batch analytics."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.112.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "httpx>=0.27.0",
  "structlog>=24.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

