[project]
name = "finetech-ml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "torch>=2.2.0",
  "numpy>=1.26.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.4.0",
  "shap>=0.46.0",
  "google-generativeai>=0.8.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
